--- a/prueba-samy-bmv/src/components/Header/Header.scss
+++ b/prueba-samy-bmv/src/components/Header/Header.scss
@@ -1,6 +1,24 @@
+@import "../../styles/variables.scss";
+
 .header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    padding: 35px 25px;
+    &--logo {
+        width: 80px;
+    }
+    &--input {
+        width: 190px;
+        height: 25px;
+        background-color: $bg-color-secondary;
+        border: none;
+        border-radius: 8px;
+        padding-left: 10px;
+        &::placeholder {
+            color: $placeholder-text;
+        }
+    }
 }
