--- a/prueba-samy-bmv/src/components/Main/Main.scss
+++ b/prueba-samy-bmv/src/components/Main/Main.scss
@@ -9,6 +9,24 @@
         list-style: none;
         display: grid;
         grid-template-columns: 1fr;
-        justify-content: center;
+    }
+    @media all and (min-width: 700px) {
+        &--productsList {
+            grid-template-columns: 1fr 1fr;
+            column-gap: 15px;
+            row-gap: 15px;
+        }
+    }
+
+    @media all and (min-width: 1050px) {
+        &--productsList {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+    }
+
+    @media all and (min-width: 1400px) {
+        &--productsList {
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+        }
     }
 }
